infrastructure/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataflowx-worker
  namespace: dataflowx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dataflowx-worker
  template:
    metadata:
      labels:
        app: dataflowx-worker
    spec:
      containers:
        - name: worker
          image: dataflowx/worker:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataflowx-scheduler
  namespace: dataflowx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataflowx-scheduler
  template:
    metadata:
      labels:
        app: dataflowx-scheduler
    spec:
      containers:
        - name: scheduler
          image: dataflowx/scheduler:latest
